Updated index.html and style.css with new CV details

--- a/index.html
+++ b/index.html
@@ -3,30 +3,104 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - Resume</title>
+  <title>Oluwaseun Damilola Ogunnubi - CV</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>OGUNNUBI OLUWASEUN DAMILOLA</h1>
-    <p>Cloud Engineer | Azure Enthusiast</p>
-    <h2>About Me</h2>
-    <p>I am a cloud engineer with a passion for building scalable, cloud-native solutions on Azure.</p>
+    <header>
+      <h1>Oluwaseun Damilola Ogunnubi</h1>
+      <p>Postgraduate Student (MSc Cloud Computing) | University of Lincoln</p>
+      <p>
+        📧 <a href="mailto:ogunnubioluwaseun01@gmail.com">ogunnubioluwaseun01@gmail.com</a> | 
+        🌐 <a href="https://github.com/Ogunnubi" target="_blank">GitHub</a> | 
+        🔗 <a href="https://linkedin.com/in/oluwaseun-ogunnubi" target="_blank">LinkedIn</a>
+      </p>
+    </header>
 
-    <h2>Skills</h2>
-    <ul>
-      <li>Azure Functions</li>
-      <li>Azure Blob Storage</li>
-      <li>CI/CD with GitHub Actions</li>
-      <li>Infrastructure as Code (Bicep/Terraform)</li>
-    </ul>
+    <section>
+      <h2>Personal Statement</h2>
+      <p>
+        A dedicated and motivated postgraduate student pursuing an MSc in Cloud Computing at the University of Lincoln 
+        (Graduating February 2026), with strong technical expertise in cloud technologies, data management, and AI applications. 
+        Certified in Microsoft Azure Fundamentals (AZ-900) and Azure Data Fundamentals (DP-900), with ongoing certification in 
+        Azure AI Fundamentals (AI-900). Skilled in problem-solving, research, and teamwork, with a keen interest in leveraging 
+        technology to drive innovation and efficiency.
+      </p>
+    </section>
 
-    <h2>Projects</h2>
-    <p>This resume is hosted in Azure! Visitor count: <span id="visitorCount">Loading...</span></p>
+    <section>
+      <h2>Education</h2>
+      <ul>
+        <li>
+          <strong>University of Lincoln, UK – MSc Cloud Computing</strong> (Expected Feb 2026)<br>
+          - Project: A Deep Learning Framework for Early Detection of Colorectal Cancer Using Colonoscopy Images
+        </li>
+        <li>
+          <strong>Tai Solarin University of Education, Nigeria – BSc Computer Science</strong> (Dec 2009)
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Certifications</h2>
+      <ul>
+        <li>DP-900: Microsoft Azure Data Fundamentals (2025)</li>
+        <li>AZ-900: Microsoft Azure Fundamentals (2025)</li>
+        <li>IC3 Digital Literacy Certification (2020)</li>
+        <li>AI-900: Microsoft Azure AI Fundamentals (Expected Sep 2025)</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Experience</h2>
+      <p><strong>IT Support Assistant – University of Lincoln, UK</strong> (Oct 2024 – Present)</p>
+      <ul>
+        <li>Provided technical support for staff and students, troubleshooting hardware, software, and network issues.</li>
+        <li>Assisted with migration of files and systems to Microsoft Azure cloud services.</li>
+        <li>Maintained university computer labs and supported IT operations.</li>
+        <li>Delivered one-to-one technical guidance to staff and students.</li>
+      </ul>
+      <p><strong>Academic & Technical Projects</strong></p>
+      <ul>
+        <li>Designed and implemented cloud-based solutions using Microsoft Azure.</li>
+        <li>Developed machine learning models for early colorectal cancer detection using deep learning.</li>
+        <li>Built and managed web applications with React.js (frontend) and Flask (backend), integrating JWT authentication.</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Skills</h2>
+      <ul>
+        <li><strong>Technical:</strong> Microsoft Azure, Python, SQL, React.js, Flask, Git/GitHub, Cloud Infrastructure, Machine Learning, Data Analytics</li>
+        <li><strong>Professional:</strong> Team Collaboration, Research & Analysis, Problem-Solving, Time Management, Communication</li>
+        <li><strong>Other:</strong> Digital Literacy, Presentation Skills</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Achievements</h2>
+      <ul>
+        <li>Microsoft Certified: Azure Fundamentals (AZ-900)</li>
+        <li>Microsoft Certified: Azure Data Fundamentals (DP-900)</li>
+        <li>IC3 Digital Literacy Certification</li>
+        <li>Preparing for: Azure AI Fundamentals (AI-900)</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Interests</h2>
+      <ul>
+        <li>Cloud Computing & AI for healthcare innovation</li>
+        <li>Technology for social good</li>
+        <li>Mentorship and community engagement</li>
+        <li>Football and volunteering</li>
+      </ul>
+    </section>
+
+    <footer>
+      <p>© 2025 Oluwaseun Damilola Ogunnubi</p>
+    </footer>
   </div>
-
-  <script>
-    // Visitor counter script will go here later
-  </script>
 </body>
 </html>
