--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <li>Football and volunteering</li>
       </ul>
     </section>
+    <!-- trigger workflow test -->
 
     <footer>
       <p>© 2025 Oluwaseun Damilola Ogunnubi</p>
